add result type to swagger trait
