# shared/src/main/scala/shared/models/swagger/smartresponse/v1/ApiTicketInfo.scala
@@ -1,0 +1,3 @@
+package shared.models.swagger.smartresponse.v1
+import java.time._
+case class ApiTicketInfo(timeslot: Option[OffsetDateTime], telephone: Option[String], closed: Boolean)
