# shared/src/main/scala/shared/models/swagger/smartresponse/v1/TelephoneNumber.scala
@@ -1,0 +1,3 @@
+package shared.models.swagger.smartresponse.v1
+import java.time._
+case class TelephoneNumber(number: String, assistant: Boolean)
