# shared/src/main/scala/shared/models/swagger/smartresponse/v1_0_0/UserData.scala
@@ -1,3 +1,0 @@
-package shared.models.swagger.smartresponse.v1_0_0
-import java.time._
-case class UserData(telephone: Option[String], firstname: Option[String], lastname: Option[String], email: String)
